fix: dark mode

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -35,6 +35,7 @@
         --modal-surface: #201A18;
         --input-surface: #260800;
         --svg-color: #875f47;
+        color-scheme: dark;
     }
 }
 
